--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,10 @@
     ],
     "rules": {
     "cypress/no-assigning-return-values": "error", 
-    "cypress/no-unnecessary-waiting": "warn", 
+    "cypress/no-unnecessary-waiting": "error", 
     "cypress/assertion-before-screenshot": "warn", 
     "cypress/no-force": "warn", 
-    "cypress/no-async-tests": "warn", 
+    "cypress/no-async-tests": "error", 
     "cypress/no-pause": "error", 
     "no-unused-vars": "error"
     },
